--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@styled-icons/material": "^10.18.0",
     "next": "^10.0.0",
     "normalize.css": "^8.0.1",
+    "pure-react-carousel": "^1.27.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.2.1"
