--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@styled-icons/material": "^10.18.0",
+    "google-maps-react": "^2.0.6",
     "next": "^10.0.0",
     "normalize.css": "^8.0.1",
     "pure-react-carousel": "^1.27.6",
