--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pure-react-carousel": "^1.27.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-player": "^2.7.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
